# Simulator

./: CMakeLists.txt  main.cpp
include/: controller.h  functions.h  mockSimulator.h  simulator.h
src/: controller.cpp  functions.cpp  main.cpp
tests/: CMakeLists.txt
tests/cmake/modules/: CodeCoverage.cmake
tests/include/: mockSimulator.h
tests/src/: math_test.cpp  simulatorTest.cpp
